--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,7 +4,7 @@ name: Deploy to PythonAnywhere
 on:
   push:
     branches:
-      - main   # adjust to your deploy branch
+      - master
 
 jobs:
   deploy:
